--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,5 +1,5 @@
 <ul class="topbar">
 	<a href="/me"><li><u>A</u>bout</li></a>
-	<a href="http://twitter.com" target="_blank"><li><u>T</u>witter</li></a>
-	<a href="http://soundcloud.com" target="_blank"><li><u>S</u>oundcloud</li></a>
+	<a href="https://xat.com/mixvto" target="_blank"><li><u>X</u>at</li></a>
+	<a href="https://remoji.com/" target="_blank"><li><u>O</u>iiiiie</li></a>
 </ul>
